[package]
name = "unsegen_signals"
version = "0.1.1"
authors = ["ftilde <ftilde@protonmail.com>"]

description = "Use unsegen's input module to raise signals on the usual key combinations"
documentation = "https://docs.rs/unsegen_signals"
repository = "https://github.com/ftilde/unsegen_signals"
readme = "README.md"
license = "MIT"
keywords = ["terminal", "tui", "signals"]

[dependencies]
libc = "0.2"
unsegen = "0.1"
